Fix #111907: Crash loading file with library overrides and object-linked materials.

It is not fully clear why the object's material accessor does return
'valid' value for out-of-bound indices. In theory, item getter should
return `false` in such case, and not pretend to give valid data. But
this seems to be expected behavior for materials, according to some
comments in BKE underlying code?

In anycase, valid material slot indices can still return empty ('null')
data, if there is no material assigned to the indexed slot.

So this liboverride-specific code does need extra validation of the item
data returned by index, before trying to access it for name matching.